<resources>
    <string name="app_name">SiriusProject</string>
    <string name="coshelok">КошелОК</string>
    <string name="settings">settings</string>
    <string name="wallet_1">Кошелек 1</string>
    <string name="zero_rub">0 ₽</string>
    <string name="add_operation">Добавить операцию</string>
    <string name="income">Доход</string>
    <string name="outcome">Расход</string>
    <string name="op_added">\"Added operation\"</string>
    <string name="example_volume">12 000 ₽</string>
    <string name="no_records_yet">У вас пока нет записей</string>
    <string name="auth_button_text">Войти с помощью Google</string>
    <string name="onboarding_welcome">Добро пожаловать \nв КошелОК</string>
    <string name="onboarding_tip">Тут вы сможете контролировать свои \nдоходы и расходы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_op">Новая операция</string>
    <string name="main_options">Основные</string>
    <string name="sum">Сумма</string>
    <string name="type">Тип</string>
    <string name="category">Категория</string>
    <string name="extra_options">Дополнительные настройки</string>
    <string name="op_date">Дата операции</string>
    <string name="create_op">Создать операцию</string>
    <string name="auth_failed">Auth failed</string>
    <string name="press_back">\"Нажмите еще раз, чтобы выйти из приложения\"</string>
    <string name="select_cat">Выберите категорию</string>
    <string name="cat_avatar_img">cat_avatar_img</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="ready_button">Готово</string>
    <string name="selector_icon">selector_icon</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="server_client_id">0</string>
    <string name="client_id">647473667859-bku4suoquvmh65uas95jq8jpvirk4lg5.apps.googleusercontent.com</string>
    <string name="select_type_operation">Выбирите тип операции</string>
    <string name="consumption">Расход</string>
    <string name="add_wallet">Создать кошелек</string>
    <string name="total_balance">Общий баланс</string>
    <string name="total_income">Общий доход</string>
    <string name="total_expense">Общий расход</string>
    <string name="no_wallets_yet">У вас пока нет созданных кошельков</string>
    <string name="next_button">Далее</string>
    <string name="enter_wallet_name">Введите название кошелька</string>
    <string name="wallet_name">Название</string>
    <string name="currency">Валюта</string>
    <string name="limit">Лимит</string>
    <string name="set_wallet_name">Придумайте название</string>
    <string name="new_wallet">Новый кошелек</string>
    <string name="wrong_amount">Введите корректную сумму</string>
    <string name="edit_wallet">Редактировать кошелек</string>
    <string name="delete">Удалить</string>
    <string name="decline">Отменить</string>
    <string name="delete_message">Уверены что хотите удалить кошелек?</string>
    <string name="no_internet">Нет соединения с интернетом</string>
    <string name="try_again">Ошибка, попробуйте снова</string>
    <string name="delete_transaction_message">Уверены, что хотите удалить транзакцию?</string>
    <string name="pick_type">Выберите тип операции</string>
    <string name="pick_category">Выберите категорию</string>
    <string name="new_category">Новая категория</string>
    <string name="category_title">Название</string>
    <string name="category_icon">Иконка</string>
    <string name="pick_color">Задать цвет</string>
    <string name="select_color">Выберите цвет</string>
    <string name="enter_limit">Установите лимит</string>
    <string name="limit_ready">Ввести лимит</string>
    <string name="edit_op">Изменить транзакцию</string>
    <string name="create_category">Создать категорию</string>
    <string name="set_category_name">Придумайте название</string>
    <string name="enter_category_name">Введите название категории</string>
    <string name="hidden_wallets">Скрытые кошельки</string>
    <string name="hide_wallets">Скрыть</string>
    <string name="date_time">%1$s %2$s</string>
    <string name="qr_error">Ошибка при сканировании кода</string>
    <string name="something_wrong">Что-то пошло не так</string>
    <string name="spending_limit_exceeded">Вы превысили лимит на траты</string>
    <string name="exceeded_limit">Превышен лимит</string>
    <string name="russian_ruble">Российский рубль (RUB)</string>
    <string name="usa_dollar">Доллар США (USD)</string>
    <string name="eur">Евро (EUR)</string>
    <string name="save">Сохранить</string>
    <string name="wrong_wallet_name">Введите корректное название</string>
    <string name="waste">Траты</string>
    <string name="refill">Пополнение</string>
    <string name="loading_error">Ошибка, проверьте подключение к интернету</string>
    <string name="statistics">Статистика</string>
    <string name="by_categories">По категориям:</string>
    <string name="categories">Категории</string>
</resources>