<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.OperationChangeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/new_op"
        app:titleTextAppearance="@style/ToolbarTextStyle" />

    <TextView
        android:id="@+id/main_options"
        style="@style/MiddleSizedTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/main_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

    </TextView>

    <LinearLayout
        android:id="@+id/table_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginEnd="@dimen/normal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/extra_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_options">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:orientation="horizontal">

            <TextView
                style="@style/MiddleSizedRegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sum">

            </TextView>

            <TextView
                style="@style/GrayTextWithArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                tools:text="130 000 ₽">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:orientation="horizontal">

            <TextView
                style="@style/MiddleSizedRegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/type">

            </TextView>

            <TextView
                style="@style/GrayTextWithArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                tools:text="Доход">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/MiddleSizedRegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                tools:text="Зарплата" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/extra_options"
        style="@style/MiddleSizedTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding"
        android:text="@string/extra_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_container" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginEnd="@dimen/normal_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extra_options">

        <TextView
            style="@style/MiddleSizedRegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/op_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            tools:text="21 июля" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_op_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@drawable/bg_add_button"
        android:text="@string/create_op"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:textAppearance="@style/WhiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>