<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_screen_menu"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/wallet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/wallet_top_margin"
        android:layout_marginBottom="6dp"
        android:text="@string/wallet_1"
        android:textColor="@color/gray_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/current_volume"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:text="@string/zero_rub"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_label">

    </TextView>

    <LinearLayout
        android:layout_marginTop="@dimen/normal_margin"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_volume">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardViewStyle"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/Text_60_Opacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:drawablePadding="6dp"
                    android:text="@string/income"
                    app:drawableStartCompat="@drawable/ic_green_dot" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_rub" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/Text_60_Opacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:drawablePadding="6dp"
                    android:text="@string/outcome"
                    app:drawableStartCompat="@drawable/ic_red_dot" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_volume" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_records_yet"
        android:textColor="@color/light_text_secondary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/add_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/add_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@drawable/bg_add_button"
        android:text="@string/add_operation"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>