<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet_information.ui.view.fragments.TypeOperationFragment">

    <include
        layout="@layout/app_toolbar"
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/select_type_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/incomeLayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/income"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/normal_margin"
            android:textColor="@color/gray_primary" />

        <ImageView
            android:id="@+id/image_check_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/consumptionLayout"
        app:layout_constraintTop_toBottomOf="@id/incomeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/consumption"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/normal_margin"
            android:textColor="@color/gray_primary" />

        <ImageView
            android:id="@+id/image_check_consumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_gravity="center" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/GrayNextButton"
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/bg_add_button"
        android:text="@string/ready_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>